--- a/confiboi-cotacao-service.yml
+++ b/confiboi-cotacao-service.yml
@@ -14,6 +14,8 @@ eureka:
     wait-time-in-ms-when-sync-empty: 3000
 
 spring:
+    application:
+        name: confiboi-cotacao-service
     datasource:
         driver-class-name: com.mysql.jdbc.Driver
         password: 'wfa4'
