--- a/confiboi-cotacao-service-2.yml
+++ b/confiboi-cotacao-service-2.yml
@@ -25,4 +25,4 @@ spring:
         generate-ddl: false
         hibernate:
             ddl-auto: create
-        show-sql: tru    
+        show-sql: true    
